--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,9 @@ services:
 
   users-db:
     container_name: users-db
-    build: https://github.com/rahmonov/flask-microservice-users.git#master:project/db
+    # build: https://github.com/rahmonov/flask-microservice-users.git#master:project/db
+    build:
+      context: ../flask-microservices-users/project/db
     ports:
       - 5435:5432
     environment:
@@ -30,7 +32,9 @@ services:
 
   users-service:
     container_name: users-service
-    build: https://github.com/rahmonov/flask-microservice-users.git
+    # build: https://github.com/rahmonov/flask-microservice-users.git
+    build:
+      context: ../flask-microservices-users
     ports:
       - 5001:5000
     environment:
@@ -47,7 +51,8 @@ services:
   web-service:
     container_name: web-service
     build:
-      context: https://github.com/rahmonov/flask-microservice-client.git
+      # context: https://github.com/rahmonov/flask-microservice-client.git
+      context: ../flask-microservices-client
       args:
         - NODE_ENV=development
         - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
